--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -52,6 +52,11 @@ on:
 permissions:
   contents: read
 
+env:
+  TF_CLOUD_ORGANIZATION: "demojorgemore"
+  TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
+  TF_WORKSPACE: "ws-jmore"
+  CONFIG_DIRECTORY: "./"
 jobs:
   terraform:
     name: 'Terraform'
